--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,1 +1,25 @@
-body{background:#002b36;color:#B58900;font-family:monospace}.hero-unit{text-align:center;margin:100px auto 40px;width:600px}.hero-unit #links{margin-top:20px}.hero-unit a,.hero-unit a:visited,.hero-unit a:hover{font-size:14px;text-decoration:none;color:#268bd2;margin-left:20px}img{width:100px;height:100px}
+body {
+    background: #000000;
+    color: #00FF00;
+    font-family: monospace
+}
+.hero-unit {
+    text-align: center;
+    margin: 100px auto 40px;
+    width: 600px
+}
+.hero-unit #links {
+    margin-top: 20px
+}
+.hero-unit a,
+.hero-unit a:visited,
+.hero-unit a:hover {
+    font-size: 14px;
+    text-decoration: none;
+    color: #268bd2;
+    margin-left: 20px
+}
+img {
+    width: 100px;
+    height: 100px
+}
