make the visited lime too

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -16,7 +16,7 @@ body {
 .hero-unit a:hover {
     font-size: 14px;
     text-decoration: none;
-    color: #268bd2;
+    color: #00FF00;
     margin-left: 20px
 }
 img {
